fixed css code spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   overflow:hidden;    
   font-family:sans-serif;
   width:100%;
+  font-size: 20px;
 }
 
 #navbar-container{  
@@ -25,6 +26,8 @@
   position:relative;
   right:50%;
   display:block;
+  border-right: 2px solid rgb(135, 135, 135);
+  border-left: 2px solid rgb(135, 135, 135);
 }
 
 #navbar ul li a{
@@ -35,7 +38,7 @@
 }
 
 #navbar ul li a:hover{
-  background-color: rgb(60, 60, 60);
+  background-color: rgb(100, 120, 190);
 }
 
 #onpage{
@@ -58,7 +61,7 @@ body{
 #mainHeading{
   text-align:center;
   font-family:sans-serif;
-
+  
 }
 
 #resumeContactDetails{
@@ -80,17 +83,17 @@ body{
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
   
 ::-webkit-scrollbar-track {
-background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-background: #888;
+  background: rgb(135, 135, 135);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-background: #555;
+  background: rgb(75, 75, 75);
 }
